// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addressBMJsonSchema 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "address1": {
      "type": "string",
    },
    "address2": {
      "type": "string",
    },
    "city": {
      "type": "string",
    },
    "countryCode": {
      "format": "countryCode",
      "type": "string",
    },
    "created": {
      "format": "unixTimestamp",
      "type": "number",
    },
    "id": {
      "type": "string",
    },
    "phone": {
      "type": "string",
    },
    "region": {
      "type": "string",
    },
    "updated": {
      "format": "unixTimestamp",
      "type": "number",
    },
    "zip": {
      "maxLength": 40,
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "address1",
    "city",
    "countryCode",
    "zip",
  ],
  "type": "object",
}
`;

exports[`addressDBMJsonSchema 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "address1": {
      "type": "string",
    },
    "address2": {
      "type": "string",
    },
    "city": {
      "type": "string",
    },
    "countryCode": {
      "format": "countryCode",
      "type": "string",
    },
    "created": {
      "format": "unixTimestamp",
      "type": "number",
    },
    "id": {
      "type": "string",
    },
    "phone": {
      "type": "string",
    },
    "region": {
      "type": "string",
    },
    "updated": {
      "format": "unixTimestamp",
      "type": "number",
    },
    "zip": {
      "maxLength": 40,
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "address1",
    "city",
    "countryCode",
    "created",
    "id",
    "updated",
    "zip",
  ],
  "type": "object",
}
`;

exports[`addressSchema 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "address1": {
      "type": "string",
    },
    "address2": {
      "type": "string",
    },
    "city": {
      "type": "string",
    },
    "countryCode": {
      "format": "countryCode",
      "type": "string",
    },
    "phone": {
      "type": "string",
    },
    "region": {
      "type": "string",
    },
    "zip": {
      "maxLength": 40,
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "address1",
    "city",
    "countryCode",
    "zip",
  ],
  "type": "object",
}
`;
